# mfriend-voice

./: .replit  main.py  manifest.json  pyproject.toml  replit.nix
static/: manifest.json
templates/: index.html
